--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/ic_login.png
+    - assets/mask.png
+    - assets/soap.png
+    - assets/temperature.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
