--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   cupertino_icons: ^0.1.3
   http: ^0.12.1
   webview_flutter: ^0.3.22+1
+  firebase_core: ^0.4.0+9 # for basic core firebase apis
+  firebase_analytics: ^5.0.2  # for app analysis automatically by firebase
+  firebase_auth: ^0.14.0+5  # for register and login flow
+  cloud_firestore: ^0.12.9+5  # for accessing the database
 
 dev_dependencies:
   flutter_test:
