--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   firebase_analytics: ^5.0.2  # for app analysis automatically by firebase
   firebase_auth: ^0.14.0+5  # for register and login flow
   cloud_firestore: ^0.12.9+5  # for accessing the database
+  carousel_slider: ^2.2.1 # for slide show
+  flutter_counter: ^1.0.3 # for + and - for the quantity of dish
 
 dev_dependencies:
   flutter_test:
