--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   camera: ^0.5.8+5        # dependencies needed for image capture on device
   path_provider: ^1.6.11
   path: ^1.7.0
+  image_picker: ^0.6.7+6
+  firebase_storage:
 
 dev_dependencies:
   flutter_test:
