PlaceOrderPage with Razorpay Checkout in FoodDelivery App

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   image_picker: ^0.6.7+6
   firebase_storage:
   location: ^3.0.2
+  razorpay_flutter: ^1.2.2
+  fluttertoast: ^7.0.4
 
 dev_dependencies:
   flutter_test:
