--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   location: ^3.0.2
   razorpay_flutter: ^1.2.2
   fluttertoast: ^7.0.4
+  google_maps_flutter: ^0.5.32
 
 dev_dependencies:
   flutter_test:
